产品化重构：界面重组、凭据续期、品牌资产与文档体系
修复扫码登录失效（严重）
  哔哩哔哩已把扫码登录的凭据下发方式改为响应头 Set-Cookie，跳转地址只剩
  crossDomain ticket。原实现只解析跳转地址的查询串，表现为扫码成功却报
  「未能解析出登录凭据」并继续等待，实际结果是任何人都无法完成登录。
  现两种形态都支持并补上回归测试。该问题只有用真实账号扫码才会暴露。

修复 QQ 告警永不送达
  starbot.core.alert.qq-type 的说明与默认值写成「1 群聊、2 私聊」，而该字段
  与推送目标的 type 同为 PushTargetType 编码（GROUP 1 / FRIEND 0），取值 2
  会被解析为 UNKNOWN 并在发送阶段丢弃。按默认配置启用 QQ 告警时一条也发不出去。
  已改正默认值与说明，并让该通道在类型非法时直接判定为不可用。

配置界面信息架构重组
  原四个页签按数据存放位置划分，改为按用户任务划分：总览 / 推送规则 /
  机器人 / 哔哩哔哩 / 设置。原始 YAML 编辑收进「设置 - 高级」并配独立保存按钮；
  首次配置向导移至总览页顶部，四步完成后自动收起。
  健康探针新增 scope，由探针自行声明归属，界面不按名称硬编码分类。
  机器人连接参数新增回填接口，但有意不回填 token。

哔哩哔哩凭据自动续期
  实现官方续期链路，随登录态复检按需执行，按「失败即维持原状」设计。
  已在真实账号上验证续期判断接口与 CorrespondPath 的 RSA-OAEP 签名。
  已知限制：扫码登录时服务端将 refresh_token 返回为空串，续期入口因此不可用，
  该状态由登录健康探针显式展示。详见 CHANGELOG。

品牌资产
  新增 NovaBot 自有标识（SVG 与 PNG），纯几何构造，与上游标识无衍生关系。
  NOTICE 补充其权利状态与名称、标识的权利保留声明。

文档
  新增架构说明、用户手册、排障与 FAQ，README 收敛为入口。
  .gitignore 补上 cookies.key 与明文凭据备份。

测试 205 项全部通过。